unpackaged/main/default/objects/Lead/fields/Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry__c</fullName>
    <description>Custom Industry Multi Picklist field for RSPCA Assured as a company can have more than one industry value selected.</description>
    <label>Company Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Industry</valueSetName>
    </valueSet>
</CustomField>