unpackaged/main/default/objects/Lead/fields/EnquiryConfirmationLogged__c.field-meta.xml
<CustomField>
    <fullName>EnquiryConfirmationLogged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnquiryConfirmationLogged</label>
    <type>Checkbox</type>
</CustomField>