unpackaged/main/default/objects/Lead/fields/Hour_Before_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Hour_Before_Created_Date__c</fullName>
    <formula>CreatedDate - MINUTE(TIMEVALUE(&quot;00:59:57.000&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Before Created Date</label>
    <type>DateTime</type>
</CustomField>