unpackaged/main/default/objects/Lead/fields/LogEnquiryConfirmation__c.field-meta.xml
<CustomField>
    <fullName>LogEnquiryConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LogEnquiryConfirmation</label>
    <type>Checkbox</type>
</CustomField>