unpackaged/main/default/objects/Lead/validationRules/MobileNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>MobileNumberValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( MobilePhone , &quot;[0-9+\\-\\(\\)\\s]*&quot;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter a valid mobile number.</errorMessage>
</ValidationRule>