unpackaged/main/default/objects/Lead/listViews/Enquiries.listView-meta.xml
<ListView>
    <fullName>Enquiries</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Company_Industry__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Review</value>
    </filters>
    <label>Enquiries (Enquiry Form completed)</label>
</ListView>