unpackaged/main/default/objects/Lead/listViews/New_Unread_Leads.listView-meta.xml
<ListView>
    <fullName>New_Unread_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>New Unread Leads</label>
</ListView>